--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Karantina:wght@300&family=Poppins&family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <title>Smaran_Das</title>
-    <link rel="stylesheet" type="text/css" href="css/Style.css">
+    <link rel="stylesheet" type="text/css" href="Css/Style.css">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="top_container">
-      <img class="cloud_top" src="images/Cloud_wbg.png" alt="cloud-img">
+      <img class="cloud_top" src="Images/Cloud_wbg.png" alt="cloud-img">
       <h1><strong><em>I'm Smaran</em></strong></h1>
       <h2>a <span class="Imp">L</span>earner</h2>
-      <img class="cloud_bottom" src="images/Cloud_wbg.png" alt="cloud-img">
-      <img src="images/Ship.png" alt="ship-img">
+      <img class="cloud_bottom" src="Images/Cloud_wbg.png" alt="cloud-img">
+      <img src="Images/Ship.png" alt="ship-img">
       <!--<img src="images/wave.png" alt="wave-img">-->
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile" src="images/PIC.png" alt="Smaran's Profile Picture">
+        <img class="profile" src="Images/PIC.png" alt="Smaran's Profile Picture">
         <h2>Namaste.</h2>
         <p class="Bio">I am eager student who wishes to explore tech and wish to someday create an high end action packed game</p>
         <p>Student at <strong><a href="https://sscbsdu.ac.in/">Shaheed Sukhdev College Of Business Studies</a></strong></p>
