--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Karantina:wght@300&family=Poppins&family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <title>Smaran_Das</title>
-    <link rel="stylesheet" type="text/css" href="Css/Style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/Style.css">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
