--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <hr>
       <div class="contact-me">
-        <img src="css/giphy3.gif" alt="phone-gif">
+        <img src="CSS/giphy3.gif" alt="phone-gif">
         <h2>Get In Touch</h2>
         <h3>Contact Info</h3>
         <center>
