--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="profile">
         <img class="profile" src="Images/PIC.png" alt="Smaran's Profile Picture">
         <h2>Namaste.</h2>
-        <p class="Bio">I am eager student who wishes to explore tech and wish to someday create an high end action packed game</p>
+        <p class="Bio">I am an eager student who wishes to explore tech and wish to someday create an high end action packed game</p>
         <p>Student at <strong><a href="https://sscbsdu.ac.in/">Shaheed Sukhdev College Of Business Studies</a></strong></p>
         <p>Graduated from <strong><a href="https://www.mayocollege.com/">Mayo College, Ajmer</a></strong></p>
       </div>
