Modified footer links

--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
     <hr>
     <div class="bottom-container">
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a><br>
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https:www.linkedin.com/in/smaran-das-b48b9b187">LinkedIn</a>
+      <a class="footer-link" href="https://drive.google.com/drive/folders/1kVMPnRJ2NAbCLFybV8-iX_AWdozEjr4X?usp=sharing">Certificates</a>
+      <a class="footer-link" href="https://drive.google.com/drive/folders/1jupZDKjzidWgy0ydHTByK-CwkxvmhW3f?usp=sharing">Projects</a>
+      <a class="footer-link" href="https://drive.google.com/file/d/10eUasOh9vJ8bnbNge-6FBSE_4dL7IIZ9/view?usp=sharing">Resume</a>
       <p>© 2021 Smaran Das</p>
     </div>
 
