--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="top_container">
       <img class="cloud_top" src="Images/Cloud_wbg.png" alt="cloud-img">
       <h1><strong><em>I'm Smaran</em></strong></h1>
-      <h2>a <span class="Imp">L</span>earner</h2>
+      <h2>a <span class="Imp">D</span>eveloper</h2>
       <img class="cloud_bottom" src="Images/Cloud_wbg.png" alt="cloud-img">
       <img src="Images/Ship.png" alt="ship-img">
       <!--<img src="images/wave.png" alt="wave-img">-->
@@ -21,9 +21,10 @@
       <div class="profile">
         <img class="profile" src="Images/PIC.png" alt="Smaran's Profile Picture">
         <h2>Namaste.</h2>
-        <p class="Bio">I am an eager student who wishes to explore tech and wish to someday create an high end action packed game</p>
-        <p>Student at <strong><a href="https://sscbsdu.ac.in/">Shaheed Sukhdev College Of Business Studies</a></strong></p>
-        <p>Graduated from <strong><a href="https://www.mayocollege.com/">Mayo College, Ajmer</a></strong></p>
+        <p class="Bio">I am a curious student who wishes to explore tech and wish to someday create an high end action packed game</p>
+        <p>Post Graduate Student at <strong><a href="https://www.tcd.ie/">Trinity College Dublin</a></strong></p>
+        <p>Graduated from <strong><a href="https://www.du.ac.in/">University of Delhi</a></strong></p>
+        <p>HighSchool<strong><a href="https://www.mayocollege.com/">Mayo College, Ajmer</a></strong></p>
       </div>
       <hr>
       <div class="skills">
