--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="profile">
         <img class="profile" src="Images/PIC.png" alt="Smaran's Profile Picture">
         <h2>Namaste.</h2>
-        <p class="Bio">I am a curious student who wishes to explore tech and wish to someday create an high end action packed game</p>
+        <p class="Bio">Welcome! I'm Smaran Das, a postgraduate Data Science student at Trinity College Dublin with a rich background in Computer Science. Originally from India, where I completed my undergraduate studies with honors, I am now immersed in exploring the complexities of machine learning, web development, and virtual reality here in Dublin. My academic pursuits are fueled by a passion for transforming theoretical knowledge into practical applications that solve real-world problems. Beyond academia, I am an avid gamer and anime enthusiast, which inspire my work in virtual reality and game development. Join me on my journey as I navigate the intricate world of technology, driven by curiosity and a commitment to excellence.</p>
         <p>Post Graduate Student at <strong><a href="https://www.tcd.ie/">Trinity College Dublin</a></strong></p>
         <p>Graduated from <strong><a href="https://www.du.ac.in/">University of Delhi</a></strong></p>
         <p>HighSchool<strong><a href="https://www.mayocollege.com/">Mayo College, Ajmer</a></strong></p>
