--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile" src="Images/Pic_Sketch_crop.png" alt="Smaran's Profile Picture">
+        <img class="profile" src="Images/Pic_Sketch_crop_2.png" alt="Smaran's Profile Picture">
         <h2>Namaste.</h2>
         <p class="Bio">Hello! I'm Smaran Das, a postgraduate Data Science student at Trinity College Dublin with a rich background in Computer Science. Originally from India, where I completed my undergraduate studies with honors, I am now immersed in exploring the complexities of machine learning, web development, and virtual reality here in Dublin. My academic pursuits are fueled by a passion for transforming theoretical knowledge into practical applications that solve real-world problems. Beyond academia, I am an avid gamer and anime enthusiast, which inspire my work in virtual reality and game development. Join me on my journey as I navigate the intricate world of technology, driven by curiosity and a commitment to excellence.</p>
         <p>Post Graduate Student at <strong><a href="https://www.tcd.ie/">Trinity College Dublin</a></strong></p>
@@ -108,8 +108,8 @@
       <a class="footer-link" href="https://www.linkedin.com/in/SmaranDas1832">LinkedIn</a>
       <a class="footer-link" href="https://drive.google.com/drive/folders/1kVMPnRJ2NAbCLFybV8-iX_AWdozEjr4X?usp=sharing">Certificates</a>
       <a class="footer-link" href="https://drive.google.com/drive/folders/1jupZDKjzidWgy0ydHTByK-CwkxvmhW3f?usp=sharing">Projects</a>
-      <a class="footer-link" href="https://drive.google.com/file/d/10eUasOh9vJ8bnbNge-6FBSE_4dL7IIZ9/view?usp=sharing">Resume</a>
-      <p>© 2021 Smaran Das</p>
+      <a class="footer-link" href="https://drive.google.com/file/d/1B10vScQAFAOkSKYe7uhRg9bCMFnCQfx1/view?usp=sharing">Resume</a>
+      <p>© 2024 Smaran Das</p>
     </div>
 
 
