--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       <img class="cloud_bottom" src="Images/Cloud_wbg.png" alt="cloud-img">
       <img src="Images/Ship.png" alt="ship-img">
       <!--<img src="images/wave.png" alt="wave-img">-->
-    </div>
+    </div class="profile">
     <div class="middle-container">
-      <div class="profile">
-        <img class="profile" src="Images/Pic_Sketch_crop_2.png" alt="Smaran's Profile Picture">
+      <img class="profile_image" src="Images\Final_PIC_sketch.png" alt="Smaran's Profile Picture">
+      <div >
         <h2>Namaste.</h2>
         <p class="Bio">Hello! I'm Smaran Das, a postgraduate Data Science student at Trinity College Dublin with a rich background in Computer Science. Originally from India, where I completed my undergraduate studies with honors, I am now immersed in exploring the complexities of machine learning, web development, and virtual reality here in Dublin. My academic pursuits are fueled by a passion for transforming theoretical knowledge into practical applications that solve real-world problems. Beyond academia, I am an avid gamer and anime enthusiast, which inspire my work in virtual reality and game development. Join me on my journey as I navigate the intricate world of technology, driven by curiosity and a commitment to excellence.</p>
         <p>Post Graduate Student at <strong><a href="https://www.tcd.ie/">Trinity College Dublin</a></strong></p>
         <p>Graduated from <strong><a href="https://www.du.ac.in/">University of Delhi</a></strong></p>
-        <p>HighSchool<strong><a href="https://www.mayocollege.com/">Mayo College, Ajmer</a></strong></p>
+        <p>HighSchool <strong><a href="https://www.mayocollege.com/">Mayo College, Ajmer</a></strong></p>
       </div>
       <hr>
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>Technical Skills</h2>
         <center>
           <table>
           <tr>
@@ -69,14 +69,14 @@
             </td>
             <td>
               <h3>Java</h3>
-             <p>Level : Beginner</p>
+             <p>Level : Intermediate</p>
             </td>
             <td>
                <img class="Javascript" src="Images/Javascript.jpg" alt="Javascript-symbol">
             </td>
             <td>
                <h3>Javascript</h3>
-               <p>Level : Beginner</p>
+               <p>Level : Intermediate</p>
             </td>
           </tr>
         </table>
